CSS: Stop navbar jumping

--- a/cmd/evil-feed-reader/data/style.css
+++ b/cmd/evil-feed-reader/data/style.css
@@ -1,3 +1,7 @@
+html, body {
+    height: 100%;
+}
+
 html {
     background-color: #EFEFEF;
 }
@@ -5,9 +9,6 @@ html {
 body {
     padding-left: 10%;
     padding-right: 15%;
-
-
-    width: 70%;
 }
 
 nav {
@@ -47,7 +48,9 @@ main {
     font-family: "Georgia", serif;
     font-size: 13pt;
     line-height: 1.7;
+}
 
+.background-main {
     background-color: white;
 }
 
